docs: update openapi specs
